New get extent endpoint Get extent from UI
