# core/clip_zip_ship.py
@@ -47,6 +47,11 @@ def get_parents():
       } for k, v in theme_parents.items()]
 
 
+def get_extent(table_name: str, out_crs: int):
+    # Redirect
+    return db_conn.get_table_extent(table_name, out_crs)
+
+
 def add_collection(data):
     # If an extent_temporal_begin is specified
     date_extent_temporal_begin = None
@@ -73,32 +78,43 @@ def add_collection(data):
                                        "Étendu temporel de fin invalide.")
 
     # Depending on the collection type
-    if data["type"] == "feature":
-        data_queryables = data["table_queryables"] or []
-        data_queryables = [d.strip() for d in data_queryables]
+    try:
+      if data["type"] == "feature":
+          # Massage the inputs
+          data_queryables = data["table_queryables"] or []
+          data_queryables = [d.strip() for d in data_queryables]
+          data_queryables = list(filter(lambda d: len(d) > 0, data_queryables))
 
-        # Add feature collection
-        return db_conn.add_collection_feature(data["parent_uuid"], data["metadata_uuid"], data["name"], data["title_en"], data["title_fr"], data["description_en"], data["description_fr"], data["keywords_en"], data["keywords_fr"], data["crs"],
-                                              'feature', 'PostgreSQL', 
-                                              data["extent_bbox"], data["extent_crs"], date_extent_temporal_begin, date_extent_temporal_end, data["geom_wkt"], data["geom_crs"],
-                                              'text/html', 'canonical', 'Metadata Record - Open Canada Portal', 'https://open.canada.ca/data/en/dataset/' + data["metadata_uuid"], 'en-CA',
-                                              data["table_name"], data["table_id_field"], data_queryables, config.DB_HOST, config.DB_NAME_FEATURES, config.DB_USER, config.DB_PASS, config.DB_SCHEMA_FEATURES)
+          # Add feature collection
+          return db_conn.add_collection_feature(data["parent_uuid"], data["metadata_uuid"], data["name"], data["title_en"], data["title_fr"], data["description_en"], data["description_fr"], data["keywords_en"], data["keywords_fr"], data["crs"],
+                                                'feature', 'PostgreSQL', 
+                                                data["extent_bbox"], data["extent_crs"], date_extent_temporal_begin, date_extent_temporal_end, data["geom_wkt"], data["geom_crs"],
+                                                'text/html', 'canonical', 'Metadata Record - Open Canada Portal', 'https://open.canada.ca/data/en/dataset/' + data["metadata_uuid"], 'en-CA',
+                                                data["table_name"], data["table_id_field"], data_queryables, config.DB_HOST, config.DB_NAME_FEATURES, config.DB_USER, config.DB_PASS, [config.DB_SCHEMA_FEATURES])
 
-    elif data["type"] == "coverage":
-        # Guess the mime/type
-        mimetype, encoding = mimetypes.guess_type(data["cov_data"])
+      elif data["type"] == "coverage":
+          # Guess the mime/type
+          mimetype, encoding = mimetypes.guess_type(data["cov_data"])
 
-        # Add coverage collection
-        return db_conn.add_collection_coverage(data["parent_uuid"], data["metadata_uuid"], data["name"], data["title_en"], data["title_fr"], data["description_en"], data["description_fr"], data["keywords_en"], data["keywords_fr"], data["crs"],
-                                               'coverage', 'rasterio', 
-                                               data["extent_bbox"], data["extent_crs"], date_extent_temporal_begin, date_extent_temporal_end, data["geom_wkt"], data["geom_crs"],
-                                               'text/html', 'canonical', 'Metadata Record - Open Canada Portal', 'https://open.canada.ca/data/en/dataset/' + data["metadata_uuid"], 'en-CA',
-                                               data["cov_data"], data["cov_format_name"], mimetype)
+          # Add coverage collection
+          return db_conn.add_collection_coverage(data["parent_uuid"], data["metadata_uuid"], data["name"], data["title_en"], data["title_fr"], data["description_en"], data["description_fr"], data["keywords_en"], data["keywords_fr"], data["crs"],
+                                                 'coverage', 'rasterio', 
+                                                 data["extent_bbox"], data["extent_crs"], date_extent_temporal_begin, date_extent_temporal_end, data["geom_wkt"], data["geom_crs"],
+                                                 'text/html', 'canonical', 'Metadata Record - Open Canada Portal', 'https://open.canada.ca/data/en/dataset/' + data["metadata_uuid"], 'en-CA',
+                                                 data["cov_data"], data["cov_format_name"], mimetype)
 
-    else:
-        raise UserMessageException(500,
-                                   "Collection provider type invalid.",
-                                   "Type de fournisseur de collection invalide.")
+      else:
+          raise UserMessageException(500,
+                                     "Collection provider type invalid.",
+                                     "Type de fournisseur de collection invalide.")
+
+    except psycopg2.DatabaseError as err:
+      if err.pgcode == config.DB_PG_CODE:
+          raise UserMessageException(500,
+                                       "Error adding the collection: " + err.diag.message_primary,
+                                       "Erreur lors de l'ajout de la collection: " + err.diag.message_primary) from err
+      else:
+          raise
 
 
 def delete_collection(coll_name: str):
